# irreducible

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
docs/superpowers/plans/: 2026-04-04-discrete-curvature.md
docs/superpowers/specs/: 2026-04-04-discrete-curvature-design.md
examples/: adjunction.rs  bifunctor.rs  bifunctor_tensor.rs  builders.rs  coherence.rs  complexity.rs  computation_state.rs  fong_spivak.rs  gorard_demo.md  gorard_demo.rs  interval.rs  lattice_gauge.rs  manifold_curvature.rs  persist_evolution.rs  stokes.rs
src/: adjunction.rs  bifunctor.rs  coherence.rs  complexity.rs  computation_state.rs  interval.rs  lib.rs  stokes.rs  test_utils.rs  trace.rs  types.rs
src/categories/: cobordism.rs  complexity.rs  computation_state.rs  mod.rs
src/functor/: adjunction.rs  bifunctor.rs  fong_spivak.rs  mod.rs  monoidal.rs  stokes_integration.rs
src/machines/: cellular_automaton.rs  configuration.rs  mod.rs  tape.rs  trace.rs  transition.rs  turing.rs
src/machines/hypergraph/: catgraph_bridge.rs  evolution.rs  gauge.rs  hyperedge.rs  hypergraph.rs  mod.rs  persistence.rs  rewrite_rule.rs
src/machines/multiway/: branchial.rs  curvature.rs  evolution_graph.rs  interval_bridge.rs  manifold_bridge.rs  mod.rs  ntm.rs  ollivier_ricci.rs  string_rewrite.rs  wasserstein.rs
tests/: adjunction_laws.rs  bifunctor_laws.rs  catgraph_bridge.rs  coherence_laws.rs  complexity_laws.rs  computation_state_laws.rs  computation_types.rs  fong_spivak.rs  functoriality.rs  hypergraph_rewriting.rs  interval_laws.rs  manifold_curvature.rs  monoidal_coherence.rs  multiway_evolution.rs  persistence.rs  property_coherence.rs  stokes_integration.rs  stokes_laws.rs
