[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["tsondru", "Claude <noreply@anthropic.com>"]

[workspace.dependencies]
amari-calculus = { path = "/home/oryx/Documents/industrial-algebra/Amari/amari-calculus" }
catgraph = { path = "/home/oryx/Documents/tsondru/catgraph" }
catgraph-surreal = { path = "/home/oryx/Documents/tsondru/catgraph/catgraph-surreal" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "3.0.4", default-features = false, features = ["kv-mem"] }
tokio = { version = "1", features = ["full"] }

[package]
name = "irreducible"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Computational irreducibility library based on Gorard's functorial perspective"
repository = "https://github.com/tsondru/irreducible"
homepage = "https://github.com/tsondru/irreducible"
keywords = ["irreducibility", "functor", "computation", "cobordism", "multiway"]
categories = ["mathematics", "science", "algorithms"]

[features]
default = []
manifold-curvature = ["dep:amari-calculus", "dep:nalgebra"]
lapack = ["dep:nalgebra-lapack", "manifold-curvature"]
persist = ["dep:catgraph-surreal", "dep:surrealdb", "dep:tokio"]

[dependencies]
amari-calculus = { workspace = true, optional = true }
catgraph.workspace = true
nalgebra = { version = "0.34", optional = true }
nalgebra-lapack = { version = "0.27", optional = true, default-features = false, features = ["lapack-openblas"] }
serde.workspace = true
serde_json.workspace = true
catgraph-surreal = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1"
