[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "MIT"
authors = ["tsondru", "Claude <noreply@anthropic.com>"]

[workspace.dependencies]
amari-calculus = { git = "https://github.com/justinelliottcobb/Amari", tag = "v0.19.1" }
catgraph = { git = "https://github.com/tsondru/catgraph", tag = "v0.10.6" }
catgraph-physics = { git = "https://github.com/tsondru/catgraph", tag = "v0.10.6" }
catgraph-surreal = { git = "https://github.com/tsondru/catgraph-surreal", tag = "v0.7.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "3.0.4", default-features = false, features = ["kv-mem"] }
tokio = { version = "1", features = ["full"] }

[package]
name = "irreducible"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Computational irreducibility library based on Gorard's functorial perspective"
repository = "https://github.com/tsondru/irreducible"
homepage = "https://github.com/tsondru/irreducible"
keywords = ["irreducibility", "functor", "computation", "cobordism", "multiway"]
categories = ["mathematics", "science", "algorithms"]

[features]
default = []
manifold-curvature = ["dep:amari-calculus", "dep:nalgebra"]
lapack = ["dep:nalgebra-lapack", "manifold-curvature"]
persist = ["dep:catgraph-surreal", "dep:surrealdb", "dep:tokio"]

[dependencies]
amari-calculus = { workspace = true, optional = true }
catgraph.workspace = true
catgraph-physics.workspace = true
nalgebra = { version = "0.34", optional = true }
nalgebra-lapack = { version = "0.27", optional = true, default-features = false, features = ["lapack-openblas"] }
serde.workspace = true
serde_json.workspace = true
catgraph-surreal = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1"

# ---------------------------------------------------------------------------
# Local development override
# ---------------------------------------------------------------------------
# During cross-repo refactors (Phase 1 Group 7 move), point catgraph at a local
# checkout so both repos can be edited in lock-step before the upstream tag is
# cut. Re-comment before pushing — released artifacts must reference the git tag.

# ---------------------------------------------------------------------------
# Local development override (uncomment in lock-step cross-repo edits)
# ---------------------------------------------------------------------------
# When using rev= deps above, change both rev= values to path= instead:
# [patch."https://github.com/tsondru/catgraph"]
# catgraph = { path = "../catgraph/catgraph" }
# catgraph-physics = { path = "../catgraph/catgraph-physics" }
#
# [patch."https://github.com/tsondru/catgraph-surreal"]
# catgraph-surreal = { path = "../catgraph-surreal" }
